fixed the second section by aligning all the pictures and text together. accounted for margins and padding as well. Put a gap in between each item for seperation. fixed header picture growing outside of container with a max height property. Project completed for now.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto', sans-serif;;
     
 }
 .header, footer {
@@ -23,6 +26,29 @@ footer {
 }
 li {
     font-size: 18px;
+}
+.body-text {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+.list-items {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 150px;
+}
+.list-items li {
+    font-size: 20px;
+}
+.item {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+    flex: 1;
 }
 .signup{
     border: 1px solid #1f2937 ;
@@ -62,9 +88,9 @@ li {
 .head-text {
     display: flex;
     flex-direction: row; 
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     padding: 0 0 0 30px;
-    margin-top: 50px;
+    margin-top: 60px;
     
 }
 .main-text {
@@ -77,10 +103,9 @@ li {
     
 }
 .head-img img {
-    width: 550px;
-    height: 200px;
+    width: 400px;
+    max-height: 250px;
     margin-left: 50px;
-    flex: 0 1 auto;
 }
 .logo {
     font-size: 24px;
